--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
             <label for="volume-slider">Volume:</label>
             <input type="range" id="volume-slider" min="0" max="1" step="0.01" value="1">
         </div>
+        <footer>
+            <p>Made by Brendan Vuu</p>
+        </footer>
     </div>
 </body>
 </html>
