--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div id="time-display">0:00 / 0:00</div>
         <div class="controls">
             <button id="play-pause" class="control-button">▶️</button>
-            <button id="stop" class="control-button">⏹️</button>
+            <button id="stop" class="control-button">↩️</button>
         </div>
         <div class="volume-container">
             <label for="volume-slider">Volume:</label>
