--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Music Player</title>
+    <title>musicplayer.studio</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="Logo.png" type="image/x-icon">  <!-- Head logo icon -->
     <script src="app.js" defer></script>
@@ -16,7 +16,7 @@
         <p id="error-message">Please select a song first!</p>
     </div>
     <div id="music-player">
-        <h1>Music Player</h1>
+        <h1>MusicPlayer.Studio</h1>
         <div class="file-input-container">
             <label for="file-input" class="file-label">Select a Song</label>
             <input type="file" id="file-input" accept="audio/*" hidden>
