--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>musicplayer.studio</title>
+    <title>musicplayer.studio</title> <!-- URL Page Title -->
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="Logo.png" type="image/x-icon">  <!-- Head logo icon -->
     <script src="app.js" defer></script>
@@ -13,29 +13,30 @@
         <img src="Logo.png" alt="Logo" id="logo">
     </div>
     <div id="error-panel" class="hidden">
-        <p id="error-message">Please select a song first!</p>
+        <p id="error-message">Please select a song first!</p> <!-- Error Message only if you don't have a selected audio file -->
     </div>
     <div id="music-player">
-        <h1>MusicPlayer.Studio</h1>
+        <h1>MusicPlayer.Studio</h1> <!-- Titling of Webpage / Heading of Webpage -->
         <div class="file-input-container">
-            <label for="file-input" class="file-label">Select a Song</label>
+            <label for="file-input" class="file-label">Select a Song</label> <!-- File Uploader Title -->
             <input type="file" id="file-input" accept="audio/*" hidden>
         </div>
         <p id="song-title">No song selected</p>
         <div id="progress-bar">
             <div id="progress"></div>
         </div>
-        <div id="time-display">0:00 / 0:00</div>
+        <div id="time-display">0:00 / 0:00</div> <!-- TimeStamp -->
         <div class="controls">
             <button id="play-pause" class="control-button">▶️</button>
             <button id="stop" class="control-button">↩️</button>
+            <button id="loop" class="control-button">🔁</button>
         </div>
         <div class="volume-container">
             <label for="volume-slider">Volume:</label>
             <input type="range" id="volume-slider" min="0" max="1" step="0.1" value="1">
         </div>
         <footer>
-            <p>Made by Brendan Vuu</p>
+            <p>Made by Brendan Vuu</p> <!-- Footer/Footing text --> 
         </footer>
     </div>
 </body>
