--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h1>MusicPlayer.Studio</h1> <!-- Titling of Webpage / Heading of Webpage -->
         <div class="file-input-container">
             <label for="file-input" class="file-label">Select a Song</label> <!-- File Uploader Title -->
-            <input type="file" id="file-input" accept="audio/*" hidden>
+            <input type="file" id="file-input" accept="audio/*">
         </div>
         <p id="song-title">No song selected</p>
         <div id="progress-bar">
