--- a/index.html
+++ b/index.html
@@ -3,13 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-capable" content="yes">
     <title>musicplayer.studio</title> <!-- URL Page Title -->
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="Logo.png" type="image/x-icon">  <!-- Head logo icon -->
     <script src="app.js" defer></script>
+    
+    <!-- Mobile Compatibility -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Ensures responsive design -->
+    <meta name="mobile-web-app-capable" content="yes"> <!-- Enables web app mode on Android -->
+    <meta name="apple-mobile-web-app-capable" content="yes"> <!-- Enables web app mode on iOS -->
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"> <!-- iOS status bar style -->
+    <meta name="theme-color" content="#282c34"> <!-- Sets the theme color for Android -->
 </head>
+
 <body>
     <div id="logo-container">
         <img src="Logo.png" alt="Logo" id="logo">
