--- a/index.html
+++ b/index.html
@@ -7,15 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="Logo.png" type="image/x-icon">  <!-- Head logo icon -->
     <script src="app.js" defer></script>
-    
-    <!-- Mobile Compatibility -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Ensures responsive design -->
-    <meta name="mobile-web-app-capable" content="yes"> <!-- Enables web app mode on Android -->
-    <meta name="apple-mobile-web-app-capable" content="yes"> <!-- Enables web app mode on iOS -->
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"> <!-- iOS status bar style -->
-    <meta name="theme-color" content="#282c34"> <!-- Sets the theme color for Android -->
 </head>
-
 <body>
     <div id="logo-container">
         <img src="Logo.png" alt="Logo" id="logo">
@@ -27,7 +19,7 @@
         <h1>MusicPlayer.Studio</h1> <!-- Titling of Webpage / Heading of Webpage -->
         <div class="file-input-container">
             <label for="file-input" class="file-label">Select a Song</label> <!-- File Uploader Title -->
-            <input type="file" id="file-input" accept="audio/*">
+            <input type="file" id="file-input" accept="audio/*" hidden>
         </div>
         <p id="song-title">No song selected</p>
         <div id="progress-bar">
@@ -47,5 +39,24 @@
             <p>Made by Brendan Vuu</p> <!-- Footer/Footing text --> 
         </footer>
     </div>
+    <script>
+        const upload = document.getElementById('audioUpload');
+        const player = document.getElementById('audioPlayer');
+
+        // Ensure the audio player is hidden initially
+        player.style.display = 'none';
+
+        upload.addEventListener('change', function() {
+            const file = this.files[0];
+            if (file) {
+                const url = URL.createObjectURL(file);
+                player.src = url;
+                player.style.display = 'block'; // Show the player when a file is uploaded
+                player.play();
+            } else {
+                player.style.display = 'none'; // Ensure it remains hidden if no file is selected
+            }
+        });
+    </script>
 </body>
 </html>
