--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
             <label for="file-input" class="file-label">Select a Song</label> <!-- File Uploader Title -->
             <input type="file" id="file-input" accept="audio/*">
         </div>
+        <div id="drag-drop-area" class="drag-drop-area">
+        </div>
         <p id="song-title">No song selected</p>
         <div id="progress-bar">
             <div id="progress"></div>
