--- a/index.html
+++ b/index.html
@@ -3,43 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>musicplayer.studio</title> <!-- URL Page Title -->
+    <title>musicplayer.studio</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="Logo.png" type="image/x-icon">  <!-- Head logo icon -->
+    <link rel="icon" href="Logo.png" type="image/x-icon">
     <script src="app.js" defer></script>
 </head>
 <body>
-    <div id="logo-container">
-        <img src="Logo.png" alt="Logo" id="logo">
-    </div>
-    <div id="error-panel" class="hidden">
-        <p id="error-message">Please select a song first!</p> <!-- Error Message only if you don't have a selected audio file -->
-    </div>
-    <div id="music-player">
-        <h1>MusicPlayer.Studio</h1> <!-- Titling of Webpage / Heading of Webpage -->
-        <div class="file-input-container">
-            <label for="file-input" class="file-label">Select a Song</label> <!-- File Uploader Title -->
-            <input type="file" id="file-input" accept="audio/*">
-        </div>
-        <div id="drag-drop-area" class="drag-drop-area">
-        </div>
-        <p id="song-title">No song selected</p>
-        <div id="progress-bar">
-            <div id="progress"></div>
-        </div>
-        <div id="time-display">0:00 / 0:00</div> <!-- TimeStamp -->
-        <div class="controls">
-            <button id="play-pause" class="control-button">▶️</button>
-            <button id="stop" class="control-button">↩️</button>
-            <button id="loop" class="control-button">🔁</button>
-        </div>
-        <div class="volume-container">
-            <label for="volume-slider">Volume:</label>
-            <input type="range" id="volume-slider" min="0" max="1" step="0.1" value="1">
-        </div>
-        <footer>
-            <p>Made by Brendan Vuu</p> <!-- Footer/Footing text --> 
+    <main class="player-wrapper">
+        <header class="player-header">
+            <img src="Logo.png" alt="App Logo" class="logo" />
+            <h1 class="app-title">MusicPlayer.Studio</h1>
+        </header>
+        <section class="player-panel">
+            <div class="file-upload-area" id="drag-drop-area">
+                <label for="file-input" class="file-label" tabindex="0">🎵 Select or Drop a Song</label>
+                <input type="file" id="file-input" accept="audio/*" aria-label="Select a song" />
+            </div>
+            <div id="error-panel" class="error-panel hidden" role="alert">
+                <span id="error-message">Please select a song first!</span>
+            </div>
+            <div class="song-info">
+                <span id="song-title">No song selected</span>
+            </div>
+            <div class="progress-container">
+                <div id="progress-bar" class="progress-bar">
+                    <div id="progress" class="progress"></div>
+                </div>
+                <div id="time-display" class="time-display">0:00 / 0:00</div>
+            </div>
+            <div class="controls">
+                <button id="stop" class="control-button" aria-label="Stop">⏹️</button>
+                <button id="play-pause" class="control-button" aria-label="Play/Pause">▶️</button>
+                <button id="loop" class="control-button" aria-label="Loop">🔁</button>
+            </div>
+            <div class="volume-container">
+                <label for="volume-slider">Volume</label>
+                <input type="range" id="volume-slider" min="0" max="1" step="0.01" value="1" />
+            </div>
+        </section>
+        <footer class="player-footer">
+            <p>Made by Brendan Vuu</p>
         </footer>
-    </div>
+    </main>
 </body>
 </html>
