--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </div>
         </section>
         <footer class="player-footer">
-            <p>Made by Brendan Vuu</p>
+            <p>Made by Brendan Vuu (Beta)</p>
         </footer>
     </main>
 </body>
