--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <title>MusicPlayer.Studio</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="icon" href="Logo.png" type="image/x-icon">
 </head>
 <body>
     <div class="container">
