--- a/index.html
+++ b/index.html
@@ -92,6 +92,10 @@
     <audio id="audioPlayer" controls style="display: none;"></audio>
 
     <script src="script.js"></script>
+    
+    <footer class="site-footer">
+        <p>MusicPlayer.Studio. Made by Brendan Vuu</p>
+    </footer>
 </body>
 </html>
 
