--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
             <div class="playlist-section" id="playlistSection">
                 <div class="playlist-title">Playlist (<span id="songCount">0</span> songs)</div>
                 <div id="playlistContainer">
-                    <!-- Playlist items will appear here -->
+                    <!-- Playlist items appear -->
                 </div>
             </div>
         </div>
     </div>
 
-    <!-- Confirmation Modal -->
+    <!-- Confirmation Modal and Deletion -->
     <div class="modal-overlay" id="deleteModal">
         <div class="modal">
             <div class="modal-title">⚠️ Remove Song</div>
