--- a/index.html
+++ b/index.html
@@ -93,8 +93,11 @@
 
     <script src="script.js"></script>
     
-    <footer class="site-footer">
+    <footer class="site-footer"> <!--The footer and the footer link-->
         <p>MusicPlayer.Studio. Made by Brendan Vuu</p>
+        <p>
+  <a href="https://www.netlify.com/" target="_blank" rel="noopener" style="color: inherit; text-decoration: underline;">Powered by netlify</a>
+</p>
     </footer>
 </body>
 </html>
