--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>Harmony | Modern Music Player</title>
     <link rel="icon" type="image/png" href="Logo.png">
     <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+        tailwind.config = {
+            darkMode: 'class',
+            theme: {
+                extend: {}
+            }
+        }
+    </script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -117,10 +125,10 @@
                         <div class="bg-white dark:bg-gray-800 rounded-xl shadow-md p-6 mb-6">
                             <h3 class="text-lg font-semibold mb-4">About</h3>
                             <p class="text-gray-600 dark:text-gray-300 mb-4">
-                                Harmony is a music player, you upload and play your MP3.
+                                Harmony is a music player, you upload and play your MP3s.
                             </p>
                             <p class="text-gray-600 dark:text-gray-300">
-                                Version 1.0.0
+                                Version 1.0.1
                             </p>
                         </div>
                         <div class="bg-white dark:bg-gray-800 rounded-xl shadow-md p-6">
