--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                                 Harmony is a music player, you upload and play your MP3s.
                             </p>
                             <p class="text-gray-600 dark:text-gray-300">
-                                Version 1.0.1
+                                <div>Official Release v.2.7.2</div>
                             </p>
                         </div>
                         <div class="bg-white dark:bg-gray-800 rounded-xl shadow-md p-6">
