--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
                                         Browse Files
                                     </button>
                                     <input type="file" id="file-input" class="hidden" accept=".mp3" multiple>
+                                    <input type="file" id="playlist-file-input" class="hidden" accept=".mp3" multiple>
                                 </div>
                             </div>
                         </div>
@@ -147,9 +148,14 @@
             <div id="playlist-sidebar" class="w-80 bg-white dark:bg-gray-800 shadow-lg transform translate-x-full fixed right-0 top-0 h-full z-40 transition-transform duration-300">
                 <div class="p-4 border-b border-gray-200 dark:border-gray-700 flex justify-between items-center">
                     <h2 class="text-xl font-semibold">Playlist</h2>
-                    <button id="close-playlist" class="p-2 rounded-full hover:bg-gray-200 dark:hover:bg-gray-700">
-                        <i class="fas fa-times"></i>
-                    </button>
+                    <div class="flex items-center space-x-2">
+                        <button id="playlist-upload-btn" class="p-2 rounded-full bg-indigo-100 dark:bg-gray-700 text-indigo-600 dark:text-indigo-400 hover:bg-indigo-200 dark:hover:bg-gray-600 transition-all" title="Add more songs">
+                            <i class="fas fa-plus"></i>
+                        </button>
+                        <button id="close-playlist" class="p-2 rounded-full hover:bg-gray-200 dark:hover:bg-gray-700">
+                            <i class="fas fa-times"></i>
+                        </button>
+                    </div>
                 </div>
                 <div id="playlist" class="overflow-y-auto h-[calc(100%-56px)]">
                     <!-- Playlist items will be added here from JavaScript -->
