--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             darkMode: 'class',
             theme: {
                 extend: {}
-            }
+            }   
         }
     </script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -76,7 +76,7 @@
                                 <!-- Now Playing -->
                                 <div class="p-6 flex flex-col items-center justify-center">
                                     <h3 id="now-playing-title" class="text-lg font-semibold text-center break-all"></h3>
-                                    <p id="now-playing-artist" class="text-gray-500 dark:text-gray-400 text-center break-all"></p>
+                                    <!-- REMOVED: <p id="now-playing-artist" class="text-gray-500 dark:text-gray-400 text-center break-all"></p> -->
                                 </div>
                                 <!-- Regular Progress Bar -->
                                 <div class="w-full px-6 pb-4">
@@ -129,7 +129,7 @@
                                 Harmony is a music player, you upload and play your MP3s.
                             </p>
                             <p class="text-gray-600 dark:text-gray-300">
-                                <div>Official Release v.2025.8.2</div>
+                                <div>Official Release v.2025.9.3</div>
                             </p>
                         </div>
                         <div class="bg-white dark:bg-gray-800 rounded-xl shadow-md p-6">
