--- a/index.html
+++ b/index.html
@@ -129,13 +129,13 @@
                                 Harmony is a music player, you upload and play your MP3s.
                             </p>
                             <p class="text-gray-600 dark:text-gray-300">
-                                <div>Official Release v.2025.9.3</div>
+                                <div>Official Fixed Release v.2025.10.25</div>
                             </p>
                         </div>
                         <div class="bg-white dark:bg-gray-800 rounded-xl shadow-md p-6">
                             <h3 class="text-lg font-semibold mb-4">Credits</h3>
                             <div class="site-footer text-gray-600 dark:text-gray-300">
-                                <p class="mb-2">Harmony | Made by Brendan Vuu</p>
+                                <p class="mb-2">Harmony Music Player | Made by Brendan Vuu</p>
                                 <p>
                                     <a href="https://www.netlify.com/" target="_blank" rel="noopener" class="text-indigo-600 dark:text-indigo-400 hover:text-indigo-800 dark:hover:text-indigo-300 underline">Powered by netlify</a>
                                 </p>
