--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@
                         <i class="fas fa-cog text-xl"></i>
                     </button>
                 </nav>
+                <!-- Dark / Light theme toggle -->
+                <div class="mt-6">
+                    <button id="theme-toggle" aria-label="Toggle dark/light theme" aria-pressed="false" class="p-3 rounded-full text-gray-500 dark:text-gray-400 hover:bg-gray-200 dark:hover:bg-gray-700 transition-all" title="Toggle dark/light theme">
+                        <i id="theme-icon" class="fas fa-moon text-xl" aria-hidden="true"></i>
+                    </button>
+                </div>
             </div>
             <!-- Main Content -->
             <div class="flex-1 flex flex-col overflow-hidden">
@@ -129,7 +135,7 @@
                                 Harmony is a music player, you upload and play your MP3s.
                             </p>
                             <p class="text-gray-600 dark:text-gray-300">
-                                <div>Official Fixed Release v.2025.10.25</div>
+                                <div>Official Fixed Release v.2025.10.26</div>
                             </p>
                         </div>
                         <div class="bg-white dark:bg-gray-800 rounded-xl shadow-md p-6">
